<resources>
    <string name="app_name">Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_main">My App Portfolio</string>
    <string name="app_1">Spotify Streamer</string>
    <string name="app_2">Scores App</string>
    <string name="app_3">Library App</string>
    <string name="app_4">Build It Together</string>
    <string name="app_5">xyz Reader</string>
    <string name="app_6">Capstone: My Own App</string>
</resources>
