<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title_main"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_main"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/primary_text"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_main"
        android:layout_centerHorizontal="true"
        android:paddingTop="15dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:text="@string/app_1"
                android:id="@+id/app1"
                android:onClick="startApp"
                android:layout_gravity="center_horizontal"
                style="@style/AppButton"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:text="@string/app_2"
                android:id="@+id/app2"
                android:onClick="startApp"
                android:layout_gravity="center_horizontal"
                style="@style/AppButton"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:text="@string/app_3"
                android:id="@+id/app3"
                android:onClick="startApp"
                android:layout_gravity="center_horizontal"
                style="@style/AppButton"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:text="@string/app_4"
                android:id="@+id/app4"
                android:onClick="startApp"
                android:layout_gravity="center_horizontal"
                style="@style/AppButton"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:text="@string/app_5"
                android:id="@+id/app5"
                android:onClick="startApp"
                android:layout_gravity="center_horizontal"
                style="@style/AppButton"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:text="@string/app_6"
                android:id="@+id/app6"
                android:onClick="startApp"
                android:layout_gravity="center_horizontal"
                style="@style/AppButton2"/>
        </FrameLayout>




    </LinearLayout>
</RelativeLayout>
